# ESPBalancingBot

./: .gitignore  README.md
code/balancingbot/: CMakeLists.txt  sdkconfig
code/balancingbot/components/proto/: CMakeLists.txt  robot.pb.c  robot.pb.h
code/balancingbot/main/: CMakeLists.txt  board.h  idf_component.yml  main.c  pid.c  pid.h  qmi8658.c  qmi8658.h  state.h  telemetryandcontrol.c  telemetryandcontrol.h  wheel.c  wheel.h
dashboard/: main.py  requirements.txt  robot_pb2.py  robot_pb2.pyi  tab_pids.py  tab_telemetry.py  udpconnection.py
protobufs/: robot.proto
